src/static/css/style.css
:root {
	--auto-grid-min-size: 300px;
	--page-max-width: 1500px;
	--size-base: 16px;
	/* Major third type scale */
	--size200: calc(var(--size-base) * 0.8);
	--size400: calc(var(--size-base) * 1.25);
	--size500: calc(var(--size-base) * 1.563);
	--size600: calc(var(--size-base) * 1.953);
	--size700: calc(var(--size-base) * 2.441);
	--size800: calc(var(--size-base) * 3.052);

	--blue900: #003d52;
	--blue800: #005875;
	--blue700: #007297;
	--blue600: #008dbc;
	--blue500: #009acf;
	--blue400: #3eb3d7;
	--blue300: #7bcbdf;
	--blue200: #b9e3e7;

	--green900: #10413b;
	--green800: #185f55;
	--green700: #1f7c6f;
	--green600: #3d9967;
	--green500: #5ab65f;
	--green400: #75c25f;
	--green300: #90cd5f;
	--green200: #c3e4a7;

	--white: #f6fbef;
}

/*  this is a guide for placement */
* {
	/* border: 1px solid red; */
}

/* MAIN PAGE STYLES */
/*#region*/
body {
	background-color: var(--white);
	color: var(--green900);
	text-align: center;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: center;
	font-size: var(--size-base, 1rem);
}
header, main {
	padding: var(--size400, 1rem);
}

header > * {
	margin-top: var(--size-base, 1rem);
	line-height: 1;
}

header > * + * {
	padding-top: var(--size400, 1rem);
}

footer {
	margin-top: auto;
}

.wrapper {
	max-width: var(--page-max-width);
	margin-left: auto;
  margin-right: auto;
}

.auto-grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(var(--auto-grid-min-size, 16rem), 1fr));
	gap: var(--size600, 1rem) var(--size500, 1rem);
}

.flex {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	align-items: baseline;
}

.block {
	display: block;
}

.inline {
	display: inline-block;
}
/*#endregion*/

/* Listings */
/*#region*/
details > summary {
	list-style: none;
	cursor: pointer;
}
details > summary::-webkit-details-marker {
  display: none;
}
details[open] p {
	cursor: pointer;
}
details[open] summary {
	visibility: hidden;
	height: 0;
}
.about > p + * {
  margin-top: var(--size-base, 1em);
}
.card {
	position: relative;
	padding: var(--size600, 1rem);
	text-align: left;
	background-color: var(--white);
	border: 2px solid var(--green300);
	box-shadow: 3px 4px 6px -2px var(--blue200);
	align-content: stretch;
	justify-content: start;
}

.contact-icon {
	position: relative;
	top: calc(0.14 * var(--size-base));
	width: var(--size-base);
	height: var(--size-base);
	fill: var(--blue500);
	stroke: var(--green500);
}

.icon.social {
	width: var(--size500);
	height: var(--size500);
	stroke: var(--blue700);
}

.business-info, .business-category {
	padding-left: var(--size400);
}
.business-info > * + * {
	margin-top: 1rem;
}
.business-info a {
  text-decoration: none;
  overflow-wrap: anywhere;
}
/*#endregion*/

/* Rounded SVG category icon and matching cutout */
/* Adapted from Stephanie Eckles https://thinkdobecreate.com/ */
/*#region*/
.card .business-icon {
	stroke: var(--blue500);
	width: 4.1rem;
	height: 4.1rem;
	position: relative;
	margin-top: -3.9rem;
	margin-right: auto;
	margin-left: auto;
	
	border-radius: 50%;
	background-color: var(--white);
	z-index: 1;
	/* object-fit: contain; */
	/* filter: drop-shadow(1px 1px 3px var(--blue900));  */
	
	/* margin-bottom: var(--size200); */
	/* padding: 0.2rem; */
}

.card::after {
    position: absolute;
    content: ""; 
}

.card::after {
	top: -2px;
	right: 50%;
	width: 7.26rem;
	height: 4.1rem;
	transform: translateX(50%);
	background-image: radial-gradient(circle at top,var(--white) 50%,var(--green300) 51%);
	clip-path: circle(50% at 50% 0);
}
/*#endregion*/

/* Search Bar */
/*#region*/
#search-form {
	white-space: nowrap; /* this prevents the label from wrapping to the next line*/
}
.search-icon {
	position: relative;
	top: calc(0.14 * var(--size800));
	width: var(--size600);
	height: var(--size600);
	stroke: var(--green800);
	stroke-width: var(--size500);
}
#search-input {
	position: relative;
	top: calc(-0.6 * var(--size400));
	background-color: inherit;
	border: none;
	border-bottom: 2px solid var(--green800);
	line-height: 2;
	max-width: 30ch;
	transition: all 0.2s ease-in-out;
	transition-duration: 0.75s;
	font-size: var(--size400);
}
#search-form:hover #search-input,
#search-input:focus {
	background-color: var(--blue200);

}
/*#endregion*/

/* Category filter links */
/*#region*/
#category-list {
	justify-content: center;
	color: var(--white);
	margin-bottom: var(--size800);
}

.category-link {
	position: relative;
	background-color: var(--green800);
	border: none;
	padding: calc(0.25 * var(--size700, 1rem)) calc(0.5 * var(--size700, 1rem));
	cursor: pointer;
	z-index: 0;
	text-decoration: none;
}
.category-link:hover, .category-link:focus, .category-link.active {
	box-shadow: 0 0 0 5px var(--link-box-shadow-color);
	z-index: 1;
}

li:nth-child(5n-4) .category-link {
	--link-box-shadow-color: var(--green900);
	background-color: var(--green900);
}
li:nth-child(5n-3) .category-link {
	--link-box-shadow-color: var(--green800);
	background-color: var(--green800);
}
li:nth-child(5n-2) .category-link {
	--link-box-shadow-color: var(--green700);
	background-color: var(--green700);
}
li:nth-child(5n-1) .category-link {
	--link-box-shadow-color: var(--blue900);
	background-color: var(--blue900);
}
li:nth-child(5n) .category-link {
	--link-box-shadow-color: var(--blue800);
	background-color: var(--blue800);
}
/*#endregion*/

/* FOOTER */
/*#region*/
footer p:last-child {
	margin-left: auto;
	margin-right: auto;
	margin-bottom: var(--size400, 1rem);
}
/*#endregion*/

/* TEXT */
/*#region*/
body {
	font-family: 'Cabin', sans-serif;
}
h1 {
	font-family: 'Lobster';
	font-size: var(--size800);
}
h2 {
	font-size: var(--size500);
	font-weight: 500;
	line-height: 1.1;
}
h3 {
	font-size: var(--size400);
}
p, a {
	font-size: var(--size-base);
	max-width: 65ch;
}
article p {
	letter-spacing: 0.7px;
}
article p, article a {
	color: var(--green700);
}
nav a {
	font-family: 'Lobster';
	font-size: var(--size700);
	padding: 0 var(--size-base, 1rem);
	text-decoration: none;
}
nav a:hover,
nav a:focus {
	color: var(--green600);
	text-decoration: underline;
}
article a:hover,
article a:focus {
	color: var(--blue700);
	text-decoration: underline;
}
header .active {
	text-decoration: underline;
}
.business-category {
	color: var(--blue700);
	letter-spacing: 1.8px;
	font-weight: 700;
	margin: var(--size600) 0 var(--size200);
	/* max-width: 12ch;
	word-wrap: normal; */
}
/*#endregion*/

/* MAP */
#mapBox {
	height: 70vh;
	width: 100%;
	border-radius: var(--size200);
}

@media (min-width: 600px) {
	:root{
		--auto-grid-min-size: 500px;
		--size-base: 17px;
	}
	header {
		line-height: 1.7;
		padding: 0 var(--size800, 2rem);
	}
	main {
		padding: 0 var(--size800, 2rem);
		margin-top: var(--size600);
	}
	.flex.card {
		flex-wrap: nowrap;
	}
	.business-category {
		position: relative;
		top: calc(var(--size-base)*-1);
	}
	.business-icon {
		margin-left: 0;
		margin-right: 0;
	}
	.category-link {
		padding: calc(0.25 * var(--size-base, 1rem)) calc(0.5 * var(--size-base, 1rem));
	}
}

